--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -4,8 +4,6 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
-    useLibrary 'org.apache.http.legacy'
-
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 23
@@ -18,12 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+ }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
+    testCompile 'org.json:json:20140107'
 }
