--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
     testCompile 'org.json:json:20140107'
+    testCompile 'com.android.volley:volley:1.0.0'
 
+    androidTestCompile 'org.mockito:mockito-core:1.10.8'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.1'
     androidTestCompile 'com.android.support:support-annotations:23.0.1'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4.1'
