--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -27,14 +27,17 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
 
+
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
     testCompile 'org.json:json:20140107'
     testCompile 'com.android.volley:volley:1.0.0'
+    testCompile 'org.robolectric:robolectric:3.1-rc1'
+    testCompile 'org.robolectric:shadows-httpclient:3.0'
 
     androidTestCompile 'org.mockito:mockito-core:1.10.8'
-    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.1'
     androidTestCompile 'com.android.support:support-annotations:23.0.1'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4.1'
 }
+
